# C-

C++_projectexpressions/: and.h  divide.h  equality.h  greaterThan.h  input.txt  lessThan.h  literal.h  minus.h  module3.cpp  negation.h  operand.cpp  or.h  parse.cpp  subexpression.cpp  subexpression.h  symboltable.cpp  symboltable.h  ternary.h  times.h
SkeletonProject2No2/: CMakeLists.txt  and.h  divide.h  expression.h  greaterThan.h  lessThan.h  literal.h  minus.h  modulo.h  operand.cpp  operand.h  parse.cpp  parse.h  plus.h  project2.cpp  quaternary.h  subexpression.cpp  subexpression.h  symboltable.cpp  symboltable.h  ternary.h  times.h  unary.h  variable.cpp  variable.h  xor.h
